chore: app configuration

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,18 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Paths */
+    "baseUrl": "./src",
+    "paths": {
+      "@pages/*": ["pages/*"],
+      "@components/*": ["components/*"],
+      "@utils/*": ["utils/*"],
+      "@assets/*": ["assets/*"],
+      "@config/*": ["config/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["./src", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
