--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^6.1.1",
+    "@types/react-infinite-scroller": "^1.2.5",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-query": "^3.39.3",
     "vite-tsconfig-paths": "^5.0.1",
     "yup": "^1.4.0"
